argocd-ingress-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.ilobanov.space # <-- set dns argocddemo.<mcs id>.demo-vkcloud.ru
      secretName: argocd-secret
  rules:
    - host: argocd.ilobanov.space # <-- set dns хост argocddemo.<mcs id>.demo-vkcloud.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
